# blobomnom

./: LICENSE  blobomnom.1  main.c  meson.build
debian/: changelog  control  copyright  rules
